--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,6 +23,12 @@ body {
     height: calc(33.333% - 10px);
     margin: 5px;
     position: relative;
+    transform: scale(1.0);
+}
+
+.memory-card:active {
+    transform: scale(0.97);
+    transition: transform 0.2s;
 }
 
 .front-face,
