--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,6 +16,7 @@ body {
     margin: auto;
     display: flex;
     flex-wrap: wrap;
+    perspective: 1000px;
 }
 
 .memory-card {
@@ -24,11 +25,18 @@ body {
     margin: 5px;
     position: relative;
     transform: scale(1.0);
+    transform-style: preserve-3d;
+    transition: transform 0.5s;
 }
 
 .memory-card:active {
     transform: scale(0.97);
     transition: transform 0.2s;
+}
+
+.memory-card.flip {
+    transform: rotateY(180deg);
+
 }
 
 .front-face,
@@ -39,5 +47,11 @@ body {
     border-radius: 5px;
     position: absolute;
     background: #1c7ccc;
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+}
+
+.front-face {
+    transform: rotateY(180deg);
 }
 
